test/types/type_variables/deitz/part7/construct-1b.good
construct-1b.chpl:6: error: unresolved type specifier 'R(t=type real, x="deitz was here")'
construct-1b.chpl:1: note: candidates are: R(type t)
